# rubble

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  rust-toolchain.toml  vercel.json
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
crates/rubble-broadphase2d/: Cargo.toml
crates/rubble-broadphase2d/src/: lib.rs
crates/rubble-broadphase3d/: Cargo.toml
crates/rubble-broadphase3d/src/: lib.rs
crates/rubble-gpu/: Cargo.toml
crates/rubble-gpu/src/: buffer.rs  context.rs  kernel.rs  lib.rs  multi_gpu.rs  rust_gpu_kernels.rs
crates/rubble-gpu/tests/: multi_gpu_tests.rs  step_timings_format.rs
crates/rubble-math/: Cargo.toml
crates/rubble-math/src/: layout_validation.rs  lib.rs
crates/rubble-narrowphase2d/: Cargo.toml
crates/rubble-narrowphase2d/src/: lib.rs
crates/rubble-narrowphase3d/: Cargo.toml
crates/rubble-narrowphase3d/src/: lib.rs
crates/rubble-primitives/: Cargo.toml
crates/rubble-primitives/src/: compaction.rs  gpu_lbvh.rs  lib.rs  prefix_scan.rs  radix_sort.rs
crates/rubble-scenes/: Cargo.toml
crates/rubble-scenes/src/: lib.rs  scenes_2d.rs  scenes_3d.rs
crates/rubble-shaders/: Cargo.toml  build.rs
crates/rubble-shaders/src/: lib.rs
crates/rubble-shapes2d/: Cargo.toml
crates/rubble-shapes2d/src/: lib.rs
crates/rubble-shapes3d/: Cargo.toml
crates/rubble-shapes3d/src/: lib.rs
crates/rubble-solver2d/: Cargo.toml
crates/rubble-solver2d/src/: lib.rs
crates/rubble-solver3d/: Cargo.toml
crates/rubble-solver3d/src/: lib.rs
crates/rubble-testkit/: Cargo.toml  GAP_REPORT.md
crates/rubble-testkit/src/: faults.rs  gaps.rs  invariants.rs  lib.rs  metrics.rs  oracle.rs  report.rs  runner.rs  scenario.rs
crates/rubble-viewer/: Cargo.toml
crates/rubble-viewer/examples/: demo_2d.rs  demo_3d.rs
crates/rubble-viewer/src/: camera.rs  lib.rs  mesh.rs  overlay.rs  renderer.rs
crates/rubble-viewer/src/shaders/: basic.wgsl
crates/rubble-wasm/: Cargo.toml
crates/rubble-wasm/src/: lib.rs
crates/rubble-wasm/tests/: marshal.rs
crates/rubble2d/: Cargo.toml
crates/rubble2d/src/: lib.rs
crates/rubble2d/src/gpu/: avbd_solve_wgsl.rs  broadphase_pairs_wgsl.rs  extract_velocity_wgsl.rs  lbvh.rs  mod.rs  narrowphase_wgsl.rs  predict_wgsl.rs
crates/rubble2d/tests/: avbd_solver_2d_tests.rs  gpu_integration.rs  gpu_regression_tests.rs  gpu_scenarios.rs  heavy_sweep_tests.rs  invariant_world_tests.rs  metamorphic_tests.rs  pair_matrix_tests.rs  scenarios.rs
crates/rubble2d/tests/support/: mod.rs
crates/rubble3d/: Cargo.toml
crates/rubble3d/examples/: bench_100k.rs  bench_10k.rs
crates/rubble3d/src/: lib.rs
crates/rubble3d/src/gpu/: adjacency_wgsl.rs  avbd_solve_wgsl.rs  broadphase_pairs_wgsl.rs  coloring_wgsl.rs  extract_velocity_wgsl.rs  lbvh.rs  mod.rs  morton_codes_wgsl.rs  narrowphase_wgsl.rs  predict_wgsl.rs  render_instances_wgsl.rs  transform_extract_wgsl.rs  warmstart_wgsl.rs
crates/rubble3d/tests/: avbd_solver_tests.rs  ccd_tests.rs  demo_repro_tests.rs  fault_detection_tests.rs  gpu_integration.rs  gpu_performance_tests.rs  gpu_regression_tests.rs  gpu_render_path_tests.rs  gpu_scenarios.rs  harness_tests.rs  heavy_sweep_tests.rs  inertia_tests.rs  invariant_world_tests.rs  metamorphic_tests.rs  narrowphase_tests.rs  pair_matrix_tests.rs  physics_exhaustive_tests.rs  scenarios.rs  wgsl_validation_tests.rs
crates/rubble3d/tests/support/: mod.rs  parry_oracle.rs
docs/: ARCHITECTURE_V1.md  CHANGELOG_CHATGPT.md  avbd-competitive-analysis.md  performance-plan.md  test-coverage-gaps.md
web/: build.sh  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/scripts/: repro_3d_debug.mjs
web/src/: types.d.ts
web/src/2d/: index.html  main.ts
web/src/3d/: index.html  main.ts
web/tests/: bench-10k-webgpu.spec.ts  bench-stress-webgpu.spec.ts  demo-2d.spec.ts  demo-3d.spec.ts  ground-contact.spec.ts  stability-1step.spec.ts  stability-pyramid-live.spec.ts  stability-pyramid.spec.ts  stability-stack.spec.ts  webgpu-narrowphase.spec.ts
