[workspace]
members = [
  "crates/rubble-math",
  "crates/rubble-gpu",
  "crates/rubble-primitives",
  "crates/rubble-shapes3d",
  "crates/rubble-broadphase3d",
  "crates/rubble-narrowphase3d",
  "crates/rubble-solver3d",
  "crates/rubble3d",
  "crates/rubble-shapes2d",
  "crates/rubble-broadphase2d",
  "crates/rubble-narrowphase2d",
  "crates/rubble-solver2d",
  "crates/rubble2d",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
encase = { version = "0.10", features = ["glam"] }
glam = { version = "0.30", features = ["bytemuck"] }
thiserror = "2"
smallvec = "1"
serde = { version = "1", features = ["derive"] }
wgpu = "26"
pollster = "0.4"
rand = "0.9"
approx = "0.5"
