[workspace]
resolver = "2"
members = [
    "crates/rubble-math",
    "crates/rubble-gpu",
    "crates/rubble-primitives",
    "crates/rubble-shapes3d",
    "crates/rubble-shapes2d",
    "crates/rubble3d",
    "crates/rubble2d",
    "crates/rubble-wasm",
    "crates/rubble-viewer",
    "crates/rubble-scenes",
]

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[profile.dev.build-override]
opt-level = 3

[workspace.dependencies]
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1", features = ["derive"] }
wgpu = "29"
pollster = "0.4"
winit = "0.30"
thiserror = "2"
naga = { version = "29", features = ["spv-in", "wgsl-in", "wgsl-out"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }
web-time = "1"

# Internal crates
rubble-math = { path = "crates/rubble-math" }
rubble-gpu = { path = "crates/rubble-gpu" }
rubble-primitives = { path = "crates/rubble-primitives" }
rubble-shapes3d = { path = "crates/rubble-shapes3d" }
rubble-shapes2d = { path = "crates/rubble-shapes2d" }
rubble3d = { path = "crates/rubble3d" }
rubble2d = { path = "crates/rubble2d" }
rubble-viewer = { path = "crates/rubble-viewer" }
rubble-scenes = { path = "crates/rubble-scenes" }
rand = "0.9"
