[package]
name = "rubble-broadphase2d"
version = "0.1.0"
edition = "2021"

[dependencies]
rubble-math = { workspace = true }
rubble-gpu = { workspace = true }
rubble-primitives = { workspace = true }
rubble-shapes2d = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu" }

[dev-dependencies]
pollster = { workspace = true }
