[package]
name = "rubble-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
naga = { workspace = true }
thiserror = { workspace = true }
web-time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
pollster = { workspace = true }
rubble-math = { workspace = true }
wgpu = { workspace = true }
