[package]
name = "rubble-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
rubble-gpu = { workspace = true }
rubble-math = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
naga = { workspace = true }
