[package]
name = "rubble-solver2d"
version = "0.1.0"
edition = "2021"

[dependencies]
rubble-math = { workspace = true }
rubble-gpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu" }

[dev-dependencies]
pollster = { workspace = true }
