[package]
name = "rubble-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Rubble GPU physics engine"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
rubble2d = { workspace = true }
rubble3d = { workspace = true }
rubble-math = { workspace = true }
rubble-gpu = { workspace = true }
glam = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
getrandom = { workspace = true }
