[package]
name = "rubble-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the Rubble GPU physics engine"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
rubble2d = { workspace = true }
rubble3d = { workspace = true }
rubble-math = { workspace = true }
rubble-gpu = { workspace = true }
rubble-scenes = { workspace = true }
glam = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
console_error_panic_hook = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
getrandom = { workspace = true }

# Native-only: drive the async `create()` in marshaling tests (CB3). These tests
# exercise the wasm-binding *logic* (shape-offset bookkeeping, transform packing,
# remove_body semantics) on the native build, since the JS-typed entry points are
# the same plain-Rust methods natively.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
pollster = { workspace = true }
