[package]
name = "rubble2d"
version = "0.1.0"
edition = "2021"

[dependencies]
rubble-math = { workspace = true }
rubble-gpu = { workspace = true }
rubble-shapes2d = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
