[package]
name = "rubble3d"
version = "0.1.0"
edition = "2021"

[dependencies]
rubble-math = { workspace = true }
rubble-gpu = { workspace = true }
rubble-primitives = { workspace = true }
rubble-shapes3d = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
wgpu = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }
naga = { workspace = true }
parry3d = "0.17"
nalgebra = "0.33"
serde_json = "1"
rubble-scenes = { workspace = true }
